@@ -84,7 +84,8 @@ function handleHide() {
 var clickScript = 'self.on("click", function(node, data) {' +
 				'var selectedText = "";' +
 				'selectedText = window.getSelection().toString();' + 
-				'self.postMessage({"selectedText" : selectedText, "docURL" : document.URL});' +
+				'var selectedTitle = prompt("Input Title For Your Content", selectedText.slice(0, 10));' +
+				'self.postMessage({"selectedTitle" : selectedTitle, "selectedText" : selectedText, "docURL" : document.URL});' +
 				'});';
 
 cm.Item({
@@ -92,8 +93,8 @@ cm.Item({
 	context : cm.SelectionContext(),
 	contentScript : clickScript,
 	onMessage : function(selectedTextAndURL) {
-		displayTitleInPanel(selectedTextAndURL.selectedText);
-		storeOnJSON(selectedTextAndURL.selectedText, selectedTextAndURL.selectedText, selectedTextAndURL.docURL);
+		displayTitleInPanel(selectedTextAndURL.selectedTitle);
+		storeOnJSON(selectedTextAndURL.selectedTitle, selectedTextAndURL.selectedText, selectedTextAndURL.docURL);
 	}
 });
 
@@ -104,7 +105,6 @@ function displayTitleInPanel(selectedText) {
 	panel.show({
 		position : button
 	});
-	
 }
 
 //store everything on JSON on file
@@ -171,7 +171,7 @@ function publishContentOnLoad() {
 								var listData = ' ';
 								var data;
 								for(data in readJSON.allData)
-									listData = listData +  '<LI>' + readJSON.allData[data].title + '</LI>';
+									listData = listData +  '<LI>' + readJSON.allData[(readJSON.allData.length - 1) - data].title + '</LI>';
 
 								myPanelfile.write(encoder.encode(listData));
 								myPanelfile.write(encoder.encode('</UL></body></html>'));
